--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -59,6 +59,7 @@ hr {
 	border-radius: 0.3rem;
 	transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 	padding: 0.75rem 1rem;
+	width: 120px;
 }
 
 .header > a:visited {
